--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.5.0",
     "@pinata/sdk": "^2.1.0",
+    "base64-sol": "^1.1.0",
     "chai": "^5.0.0",
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^2.2.0",
